<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentContainer"
    tools:context=".IntroSlider">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/introSliderViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/indicatorsContainer"
        app:layout_constraintBottom_toTopOf="@+id/skipNextLayout"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/indicatorsContainer"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" />


    <LinearLayout
        android:id="@+id/skipNextLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center">

            <TextView
                android:id="@+id/skipTxtV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:padding="15dp"
                android:text="@string/skip_intro"
                android:textSize="24sp" />

        </LinearLayout>

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@drawable/next_cornered_button"
            android:gravity="center"
            android:text="@string/next_intro"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/getStartedBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="14dp"
        android:text="@string/get_started"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />






</androidx.constraintlayout.widget.ConstraintLayout>